# qwen3

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  debug_test.py  final_test.py  final_test_vllm.py  git_setup.md  pyproject.toml  requirements.txt  setup.sh  stop_vllm.sh  test.py  test_results_ultimate_1750509757.json
config/: generation_config.py
datasets/: datasets-jbUvvCzNBAt7-alpaca-2025-07-21.json  mao20250621.dataset.json
deploy/: README.md  config.json  deploy.sh  monitor.sh  one_click_deploy.sh  start_service.sh  status.sh  stop_service.sh  test_inference.sh
deploy/vet-qwen3-lora/: docker-compose.yml  test_chat.py
docs/: UV_USAGE.md  git_setup.md
finetune/: README.md  check_environment.py  requirements.txt  start_training.sh  test_model.py  test_pretrain.py  train.py  validate_dataset.py
scripts/: chat_with_finetuned.py  compare_models.py  monitor_gpu.sh  quick_train.sh  setup.sh  smart_truncation_recovery.py  start_vllm.sh  test_finetuned_advanced.py  test_finetuned_improved.py  test_finetuned_model.py  test_lowmem.sh  test_simple.sh  test_training.sh  train_lowmem.sh  train_with_uv.sh  ultimate_test.py  validate_model.sh  verify_env.sh  verify_paths.sh
scripts/merge/: merge.py
scripts/train/: train.py
tests/: debug_test.py  final_test.py  final_test_vllm.py  improved_test.py  simple_time_test.py  test.py  test_time_evaluation.py
tools/: optimized_inference.py  response_optimizer.py
tools/mcp_tools/: mcp_client.py  mcp_server.py  requirements.txt  test_mcp.py
(+8 files in other folders)
