[project]
name = "qwen3"
version = "0.1.0"
description = "Qwen3-0.6B Fine-tuning Project"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "transformers==4.40.2",
    "accelerate>=0.20.0",
    "sentencepiece>=0.1.99",
    "tokenizers>=0.13.0",
    "requests>=2.28.0",
    "numpy>=1.21.0",
    "huggingface-hub>=0.16.0",
    "safetensors>=0.3.0",
    "psutil>=5.9.0",
    "peft>=0.7.0",
    "datasets>=2.14.0",
    "tensorboard>=2.13.0",
    "wandb>=0.15.0",
    "bitsandbytes>=0.41.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
